tests/unit/parser/invalid-domains/predicate-definition-with-repeated-parameter.pddl
; parameter with name `?x` (5:37) is defined multiple times in parameters of `wow` (5:23)
(define (domain predicate-definition-with-repeated-parameter)
        (:requirements :typing)
        (:types cool beans)
        (:predicates (wow ?x - cool ?x - beans)))